src/objects/MMD_Con_Office__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultant Firm&apos;s Branch Offices</description>
    <fields>
        <fullName>ADDRESS__c</fullName>
        <label>Address</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BAREACODE__c</fullName>
        <label>Phone Area Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOFFICE__c</fullName>
        <label>Branch Office Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRAPHONE__c</fullName>
        <label>Main Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CITY__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTRY__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Offices/Organizations</relationshipLabel>
        <relationshipName>MMD_Con_Offices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OFFNAME__c</fullName>
        <label>Office/Organization Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Lookup__c</fullName>
        <formula>ID__c &amp; BOFFICE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <label>Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>MMD Con Office</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Con Offices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>